--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 
 <body>
 
-    <header>
-        <h1>عبدالرحمن رجب | الرائد</h1> 
-      </header>
-      
   <nav>
     <a href="#about">من أنا</a>
     <a href="#story">قصتي</a>
@@ -25,7 +21,15 @@
     <a href="#events">الفعاليات</a>
     <a href="#contact">تواصل</a>
   </nav>
-
+  
+  <header>
+    <div class="header-content">
+      <h1>الرائد | عبدالرحمن رجب</h1>
+      <p class="highlight-text">اسم ستراه كثيرا</p>
+    </div>
+  </header>
+  
+  
   <section id="about">
     <h2>من أنا</h2>
     <div class="about">
