--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="الموقع الرسمي لعبدالرحمن رجب – كاتب، كوتش، ملاكم، ومؤلف كتب التنمية البشرية الأكثر تأثيرًا في مصر. اكتشف كتبه، فعالياته، محتواه، وتواصَل معه من خلال منصة احترافية مصممة بكل شغف وإبداع.">
+  <meta name="description" content="الموقع الرسمي لعبدالرحمن رجب – كاتب، كوتش، ملاكم، ومؤلف كتب التنمية البشرية الأكثر تأثيرًا في مصر. اكتشف كتبه، فعالياته، محتواه.">
+  <meta property="og:image" content="mood.png" />
   <title>عبدالرحمن رجب | الرائد</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
-
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -80,16 +79,28 @@
   <section id="portfolio">
     <h2>أعمالي</h2>
     <div class="card-grid">
-      <div class="card">
-        <img src="IMG-20240410-WA0022.jpg" alt="كتاب 1">
-        <h3>From Zero</h3>
-        <p>أول كتاب لي في سلسلة من الكتب التي تهدف إلى تطوير الذات وتحقيق النجاح.</p>
-      </div>
-      <div class="card">
-        <img src="1000018138.jpg" alt="كتاب 2">
-        <h3>Step One</h3>
-        <p>الكتاب الثاني في السلسلة التي تستكمل رحلة التغيير وتحقيق الأهداف.</p>
-      </div>
+    <div class="card">
+  <img src="IMG-20240410-WA0022.jpg" alt="كتاب From Zero">
+  <h3>From Zero</h3>
+  <p>أول كتاب لي في سلسلة من الكتب التي تهدف إلى تطوير الذات وتحقيق النجاح.</p>
+  <p class="price">السعر: 100 جنيه</p>
+<p class="availability unavailable">غير متاح</p>
+</div>
+<div class="card">
+  <img src="1000018138.jpg" alt="كتاب Step One">
+  <h3>Step One</h3>
+  <p>الكتاب الثاني في السلسلة التي تستكمل رحلة التغيير وتحقيق الأهداف.</p>
+  <p class="price">السعر: 120 جنيه</p>
+<p class="availability unavailable">غير متاح</p>
+</div>
+<div class="card">
+  <img src="IMG-20250521-WA0043.jpg" alt="كتاب Game Over… Start Again">
+  <h3>Game Over… Start Again</h3>
+  <p>مش دي النهاية…<br>دي فرصتك تبدأ من جديد، أقوى.</p>
+  <p class="price">السعر: 120 جنيه</p>
+  <p class="availability available">متاح</p>
+</div>
+
     </div>
   </section>
 
